# Real-Time-Computer-Emulator

./: .gitignore  CMakeLists.txt  build_emulator.sh  build_sample_os.sh  clean.sh  readme.md
samples/small_os/: Makefile  boot.asm  common.h  init.c  keyboard.c  linker.ld  main.c  main2.c  startup.asm  vga.c
samples/tiny_os/: tiny_os.asm
src/: common.hpp  main.cpp
src/bios/: Makefile  linker.ld
src/bios/common/: common.cpp  common.h  common_funcs.asm  sizes.h
src/bios/disk/: disk.asm  disk_cpp.cpp  fdd_configure.cpp
src/bios/main/: bios_main.cpp  ivt_setup.cpp  startup.asm
src/bios/pic/: pic_configure.cpp
src/bios/video/: font8x8.h  rgb.h  vga.cpp  video.asm  video_cpp.cpp
src/emulator/: emulator.cpp  emulator.h  os_terminal_io.cpp  os_terminal_io.hpp  window.cpp  window.hpp
src/hardware/: memory_loader.cpp  memory_loader.h
src/hardware/cpu_i386/: cpu_i386.cpp  cpu_i386.hpp  reset_vector.asm
src/hardware/cpu_i386/a20_gate/: a20_gate.h  a20_gate_controller.cpp  a20_gate_controller.hpp
src/hardware/cpu_i386/descriptors/: gate_desc.h  general_desc.h  segment_desc.h  sys_segment_desc.h
src/hardware/cpu_i386/exceptions/: exceptions.h
src/hardware/cpu_i386/instr/: helper_funcs.cpp  helper_funcs.h  instr_decoder.cpp  instr_decoder.h  instr_executer.cpp  instr_executer.h  instr_handlers.cpp  instr_handlers.h  setup.cpp  setup.h  x86_instruction.h
src/hardware/cpu_i386/interrupts/: interrupt.h  interrupts_system.cpp  interrupts_system.h
src/hardware/cpu_i386/io/: io.cpp  io.hpp  mem_mapped_io.h  port_mapped_io.h
src/hardware/floppy_disk/: commands_queue.h  floppy_commands.h  floppy_disk_driver.cpp  floppy_disk_driver.hpp  floppy_driver_t.h  floppy_input_codes.h  floppy_output_codes.h
src/hardware/ps2_controller/: keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  ps2_controller.cpp  ps2_controller.h
src/hardware/vga/: vga.cpp  vga.hpp  vga_pmio_codes.h
src/hardware/vga/crt/: crt.h  (+2 more)
src/machine/: machine.cpp  machine.hpp
(+41 files in other folders)
